[gd_scene load_steps=6 format=3 uid="uid://c0k630esitjju"]

[ext_resource type="Script" path="res://scenes/menu/pause_menu.gd" id="1_2nap2"]
[ext_resource type="Shader" path="res://shader/paused.gdshader" id="2_sjp67"]
[ext_resource type="PackedScene" uid="uid://dby7dch41cs42" path="res://scenes/menu/options_menu.tscn" id="3_i1q8h"]
[ext_resource type="PackedScene" uid="uid://di03kretluhk6" path="res://scenes/menu/ui_click_audio.tscn" id="4_jyexc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g7gcb"]
shader = ExtResource("2_sjp67")
shader_parameter/blur_amount = 1.0

[node name="PauseMenuLayer" type="CanvasLayer"]
process_mode = 2
layer = 99
script = ExtResource("1_2nap2")

[node name="DarkenBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.333333)

[node name="BlurBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_g7gcb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PauseText" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Paused"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitToMenuButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.443137, 0.376471, 1)
theme_override_font_sizes/font_size = 32
text = "Quit to Menu"

[node name="OptionsMenu" parent="." instance=ExtResource("3_i1q8h")]
visible = false

[node name="UIClickAudio" parent="." instance=ExtResource("4_jyexc")]

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
[connection signal="pressed_back" from="OptionsMenu" to="." method="_on_options_menu_pressed_back"]
